@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-26T01:44:17Z",
+  "timestamp" : "2022-05-31T01:41:15Z",
   "count_outdated" : 258,
   "uniques_outdated" : 151,
-  "count" : 270,
-  "uniques" : 160,
+  "count" : 273,
+  "uniques" : 162,
   "clones" : [
     {
       "timestamp": "2022-05-17T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 5, 8 ],
       "uniques": 7,
       "uniques_minmax": [ 4, 7 ]
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
