@@ -1,6 +1,6 @@
 {
-  "count": 12,
-  "uniques": 7,
+  "count": 15,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 8,
       "uniques": 7
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
